--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -45,3 +45,5 @@ $spacing-tny: #{$tny/$font-size}rem;
 
 $container-height: #{384/$font-size}rem;
 $container-width: #{342/$font-size}rem;
+
+$chat-height: 550;
