--- a/src/component/chat/Chat.scss
+++ b/src/component/chat/Chat.scss
@@ -59,3 +59,8 @@
   margin-right: #{1/$font-size}rem;
   margin-bottom: #{2/$font-size}rem;
 }
+
+.queuePosition {
+  composes: u-textCenter from global;
+  color: $zd-color-aluminum;
+}
