--- a/src/component/chat/Chat.scss
+++ b/src/component/chat/Chat.scss
@@ -3,11 +3,8 @@
 .scrollContainerMobile {
   height: calc(100% - #{150/$font-size}rem);
   max-height: #{480/$font-size}rem;
-  position: relative;
-
-  .agentTyping {
-    bottom: 0;
-  }
+  display: flex;
+  flex-direction: column-reverse;
 }
 
 .container {
@@ -23,7 +20,6 @@
 
   width: calc(100% - #{20/$font-size}rem);
   bottom: 0;
-  position: absolute;
 }
 
 .header {
