Add mobile styles to proactive chat notifications

--- a/src/component/chat/ChatPopup.scss
+++ b/src/component/chat/ChatPopup.scss
@@ -5,6 +5,7 @@
 }
 
 .container {
+  position: relative;
   background-color: $zd-color-white;
   border-radius: #{3/$font-size}rem;
   box-shadow: 0 0 #{8/$font-size}rem 0 rgba($base-shadow, 0.26);
@@ -31,6 +32,10 @@
     margin-right: #{20/$font-size}rem !important;
     margin-left: #{12/$font-size}rem !important;
   }
+}
+
+.ctaBtnMobile {
+  border-radius: #{4/$font-size}rem;
 }
 
 .rightCtaBtn {
