--- a/src/component/chat/ChatNotificationPopup.scss
+++ b/src/component/chat/ChatNotificationPopup.scss
@@ -1,11 +1,11 @@
 @import '../../styles/_vars.scss';
 
 .ongoingNotificationCta {
-  bottom: #{15/$font-size}rem;
+  bottom: #{10/$font-size}rem !important;
 }
 
 .ongoingNotificationDesktop {
-  bottom: #{80/$font-size}rem;
+  bottom: #{80/$font-size}rem !important;
 }
 
 .ongoingNotificationMobile {
