Rename class in MessageError

--- a/src/component/chat/MessageError.scss
+++ b/src/component/chat/MessageError.scss
@@ -4,7 +4,7 @@
   color: $error-color;
 }
 
-.messageErrorRetry {
+.messageErrorLink {
   color: $error-color;
   cursor: pointer;
   text-decoration: underline;
