Add some styling to offline screen

--- a/src/component/chat/ChatOffline.scss
+++ b/src/component/chat/ChatOffline.scss
@@ -29,3 +29,8 @@
   max-height: none;
   position: relative;
 }
+
+.greeting {
+  margin-top: #{6/$font-size}rem;
+  font-size: #{13/$font-size}rem;
+}
