Add a update menu visibility action and state.
This state will control when a menu should be visible.

--- a/src/styles/components/Icon.scss
+++ b/src/styles/components/Icon.scss
@@ -375,3 +375,12 @@
     fill: $zd-color-aluminum;
   }
 }
+
+.Icon--menu {
+  svg {
+    min-width: #{13/$font-size}rem;
+    min-height: #{13/$font-size}rem;
+    height: #{13/$font-size}rem;
+    width: #{13/$font-size}rem;
+  }
+}
