--- a/src/component/chat/ChatOfflineForm.scss
+++ b/src/component/chat/ChatOfflineForm.scss
@@ -9,3 +9,35 @@
   composes: u-marginTT from global;
   margin-bottom: #{18/$font-size}rem;
 }
+
+.loadingSpinner {
+  composes: u-flex u-posFill u-posAbsolute u-flexAlignItemsCenter u-flexJustifyCenter from global;
+}
+
+.info {
+  padding: #{20/$font-size}rem;
+  border: $thin-border-size solid $stroke-color;
+  border-radius: #{4/$font-size}rem;
+}
+
+.message {
+  margin-top: #{6/$font-size}rem;
+  margin-bottom: #{10/$font-size}rem;
+}
+
+.successContainer {
+  font-size: #{13/$font-size}rem;
+  line-height: #{20/$font-size}rem;
+  color: $zd-color-oil;
+}
+
+.backButton {
+  max-width: 100%;
+  width: 100%;
+  margin-top: #{20/$font-size}rem;
+}
+
+.offlineMessage {
+  margin-top: #{10/$font-size}rem;
+  line-height: #{18/$font-size}rem;
+}
