Update chat to show agent list component when header clicked in chat log

--- a/src/component/chat/Chat.scss
+++ b/src/component/chat/Chat.scss
@@ -92,3 +92,8 @@
   composes: u-textCenter from global;
   color: $zd-color-aluminum;
 }
+
+.agentListBackButton {
+  width: 100%;
+  max-width: unset;
+}
