--- a/src/component/chat/ChatContactDetailsPopup.scss
+++ b/src/component/chat/ChatContactDetailsPopup.scss
@@ -29,7 +29,7 @@
 
 .fieldLabel {
   composes: u-marginBS from global;
-  font-size: #{13/$font-size}rem;
+  font-size: #{13/$font-size}rem !important;
   color: $zd-color-dark-gray !important;
 }
 
