--- a/src/component/chat/ChatEmailTranscriptPopup.scss
+++ b/src/component/chat/ChatEmailTranscriptPopup.scss
@@ -59,6 +59,10 @@
   color: $zd-color-dark-gray !important;
 }
 
+.fieldInputMobile {
+  font-size: #{13/$font-size}rem !important;
+}
+
 .loadingSpinner {
   composes: u-textCenter from global;
 }
