--- a/src/component/chat/Chat.scss
+++ b/src/component/chat/Chat.scss
@@ -40,8 +40,7 @@
 }
 
 .footer {
-  padding-top: #{21/$font-size}rem !important;
-  padding-bottom: #{4/$font-size}rem !important;
+  padding: #{21/$font-size}rem #{15/$font-size}rem #{8/$font-size}rem !important;
 }
 
 .footerMobile {
