Add new user colour bg that doesn't change on hover for chat messages

--- a/src/component/chat/ChatGroup.scss
+++ b/src/component/chat/ChatGroup.scss
@@ -70,7 +70,7 @@
 }
 
 .userBackground {
-  composes: u-userBackgroundColor from global;
+  composes: u-userBackgroundColorNoHover from global;
 }
 
 .agentBackground {
