Fix chat log text colours

--- a/src/component/chat/ChatEventMessage.scss
+++ b/src/component/chat/ChatEventMessage.scss
@@ -4,5 +4,5 @@
   composes: u-textCenter from global;
   margin-top: #{5/$font-size}rem;
   margin-bottom: #{10/$font-size}rem;
-  color: $zd-color-aluminum;
+  color: $zd-color-aluminum !important;
 }
