--- a/src/component/chat/Chat.scss
+++ b/src/component/chat/Chat.scss
@@ -59,7 +59,7 @@
 
 .agentTyping {
   composes: u-posAbsolute u-paddingTS from global;
-  bottom: #{97/$font-size}rem;
+  bottom: #{143/$font-size}rem;
   color: $zd-color-aluminum;
   width: #{301/$font-size}rem;
   background: linear-gradient(to bottom, rgba($zd-color-white, 0), rgba($zd-color-white, 0.8));
@@ -68,6 +68,7 @@
 .loadingEllipses {
   composes: u-inlineBlock from global;
   padding-right: #{2/$font-size}rem;
+  margin-right: #{5/$font-size}rem;
 }
 
 .loadingEllipsesItem {
