--- a/src/component/chat/ChatFooter.scss
+++ b/src/component/chat/ChatFooter.scss
@@ -9,6 +9,7 @@
 .icon {
   margin-right: #{3/$font-size}rem;
   border-radius: #{4/$font-size}rem;
+  height: #{24/$font-size}rem;
 
   svg {
     padding: #{5/$font-size}rem;
