--- a/src/component/chat/ChatPopup.scss
+++ b/src/component/chat/ChatPopup.scss
@@ -32,6 +32,7 @@
   border-radius: #{3/$font-size}rem;
   box-shadow: 0 0 #{8/$font-size}rem 0 rgba($base-shadow, 0.26);
   width: auto;
+  min-height: #{75/$font-size}rem;
   margin: 0 #{16/$font-size}rem #{30/$font-size}rem;
 }
 
