--- a/src/component/chat/ChatGroup.scss
+++ b/src/component/chat/ChatGroup.scss
@@ -1,4 +1,5 @@
 @import '../../styles/_vars.scss';
+@import '../../styles/mixins.scss';
 
 .container {
   position: relative;
@@ -104,7 +105,8 @@
 
 .avatar {
   position: absolute;
-  bottom: #{5/$font-size}rem;
+  transition: top 300ms ease-in-out;
+  padding-bottom: #{5/$font-size}rem !important;
 
   svg {
     min-width: #{32/$font-size}rem;
@@ -124,4 +126,12 @@
   composes: avatar;
   height: #{32/$font-size}rem;
   width: #{32/$font-size}rem;
+}
+
+.fadeIn {
+  @include fade-in(200ms);
+}
+
+.fadeUp {
+  @include fade-up(200ms);
 }
