--- a/src/component/chat/Chat.scss
+++ b/src/component/chat/Chat.scss
@@ -27,6 +27,10 @@
 .scrollContainerContent {
   height: 100%;
   max-height: none;
+  margin-right: #{7/$font-size}rem !important;
+  margin-left: #{7/$font-size}rem !important;
+  padding-right: #{8/$font-size}rem !important;
+  padding-left: #{8/$font-size}rem !important;
 }
 
 .scrollContainerMessagesContent {
