--- a/src/component/chat/Chat.scss
+++ b/src/component/chat/Chat.scss
@@ -37,10 +37,12 @@
 
 .header {
   composes: u-marginBM from global;
+  position: relative;
 }
 
 .footer {
-  padding: #{21/$font-size}rem #{15/$font-size}rem #{8/$font-size}rem !important;
+  box-shadow: 0 0 #{12/$font-size}rem #{8/$font-size}rem $zd-color-white;
+  padding: #{8/$font-size}rem #{15/$font-size}rem !important;
 }
 
 .footerMobile {
@@ -59,7 +61,7 @@
 
 .agentTyping {
   composes: u-posAbsolute u-paddingTS from global;
-  bottom: #{143/$font-size}rem;
+  bottom: #{130/$font-size}rem;
   color: $zd-color-aluminum;
   width: #{301/$font-size}rem;
   background: linear-gradient(to bottom, rgba($zd-color-white, 0), rgba($zd-color-white, 0.8));
