--- a/src/component/chat/ChatHeader.scss
+++ b/src/component/chat/ChatHeader.scss
@@ -17,8 +17,8 @@
 .container {
   composes: u-flex u-flexAlignItemsCenter u-posStart--flush u-posAbsolute u-hsizeAll from global;
   background-color: $base-color;
-  border-bottom: #{1/$font-size}rem solid $zd-color-gainsboro;
   box-sizing: border-box;
+  box-shadow: 0 #{4/$font-size}rem #{8/$font-size}rem 0 rgba($zd-color-black, 0.1);
   height: #{58/$font-size}rem;
   padding: #{5/$font-size}rem #{17/$font-size}rem;
   top: #{43/$font-size}rem;
