--- a/src/component/chat/Chat.scss
+++ b/src/component/chat/Chat.scss
@@ -34,8 +34,9 @@
 }
 
 .scrollBarFix {
-  margin-right: #{1/$font-size}rem !important;
-  padding-right: #{14/$font-size}rem !important;
+  overflow-y: scroll !important;
+  margin-right: 0 !important;
+  padding-right: #{15/$font-size}rem !important;
 }
 
 .scrollContainerMessagesContent {
