--- a/src/component/chat/ChatFooter.scss
+++ b/src/component/chat/ChatFooter.scss
@@ -4,10 +4,13 @@
   composes: u-flex from global;
   justify-content: flex-end;
   padding-top: #{8/$font-size}rem;
+
+  > div {
+    margin-right: #{3/$font-size}rem;
+  }
 }
 
 .icon {
-  margin-right: #{3/$font-size}rem;
   border-radius: #{4/$font-size}rem;
 
   svg {
