--- a/src/component/chat/ChatOperatingHours.scss
+++ b/src/component/chat/ChatOperatingHours.scss
@@ -8,14 +8,19 @@
   font-size: #{13/$font-size}rem;
 }
 
-.singleDay {
+.dayList {
   font-size: #{13/$font-size}rem;
   margin: #{16/$font-size}rem 0;
 }
 
 .dayName {
   font-size: #{13/$font-size}rem;
+  font-weight: bold;
   padding-bottom: #{4/$font-size}rem;
+}
+
+.hours {
+  margin-bottom: #{15/$font-size}rem;
 }
 
 .button {
