Reduce right padding for IE/FF scroll content

--- a/src/component/chat/Chat.scss
+++ b/src/component/chat/Chat.scss
@@ -36,7 +36,7 @@
 .scrollBarFix {
   overflow-y: scroll !important;
   margin-right: 0 !important;
-  padding-right: #{15/$font-size}rem !important;
+  padding-right: #{3$font-size}rem !important;
 }
 
 .scrollContainerMessagesContent {
