--- a/src/component/Icon.scss
+++ b/src/component/Icon.scss
@@ -36,12 +36,16 @@
 }
 
 .tooltip-base {
-  composes: c-tooltip c-arrow u-va-top from global;
+  composes: c-tooltip c-arrow from global;
   position: absolute;
-  top: #{-25/$font-size}rem;
+  top: #{-29/$font-size}rem;
   right: #{3/$font-size}rem;
   z-index: 9999;
   visibility: hidden;
+  border-radius: #{4/$font-size}rem;
+  background-color: $zd-color-dark-gray;
+  padding-top: #{2/$font-size}rem;
+  padding-bottom: #{2/$font-size}rem;
   transition: opacity 150ms ease-out;
   opacity: 0;
 }
