Render a loading screen after submitting preChat form for offline dept.

--- a/src/component/chat/Chat.scss
+++ b/src/component/chat/Chat.scss
@@ -11,6 +11,11 @@
   }
 }
 
+.loadingSpinner {
+  display: block;
+  margin: 50% auto 0;
+}
+
 .container {
   height: #{$chat-height/$font-size}rem;
 }
