--- a/src/component/chat/ChatOperatingHours.scss
+++ b/src/component/chat/ChatOperatingHours.scss
@@ -35,3 +35,16 @@
   // left: 0;
   margin: 0 #{10/$font-size}rem;
 }
+
+.dropdown {
+  composes: u-marginBL from global;
+}
+
+.dropdownMenuContainer {
+  height: auto !important;
+  max-height: #{200/$font-size}rem;
+}
+
+.hidden {
+  composes: u-isHiddenVisually from global;
+}
