[CE-3970] Fix text size on mobile

--- a/src/component/chat/ChatOffline.scss
+++ b/src/component/chat/ChatOffline.scss
@@ -10,7 +10,12 @@
 }
 
 .mobileContainer {
+  composes: u-textSizeMed from global;
   height: 100% !important;
+
+  .greeting {
+    font-size: #{14/$font-size}rem !important;
+  }
 }
 
 .container {
