[CE-3047] Render Zendesk logo for Chat (desktop only)

--- a/src/component/chat/Chat.scss
+++ b/src/component/chat/Chat.scss
@@ -126,6 +126,18 @@
   max-width: unset;
 }
 
+.agentListBackButtonWithLogo {
+  margin-bottom: #{24/$font-size}rem;
+}
+
 .reconnectContainer {
   composes: u-flex u-posFill u-posAbsolute u-flexAlignItemsCenter u-flexJustifyCenter from global;
+}
+
+.zendeskLogo {
+  z-index: 1;
+}
+
+.logoFooter {
+  height: #{12/$font-size}rem;
 }
