--- a/src/component/chat/ChatOffline.scss
+++ b/src/component/chat/ChatOffline.scss
@@ -9,6 +9,11 @@
   margin: 0 #{10/$font-size}rem;
 }
 
+.buttonFooter {
+  max-width: 100%;
+  width: 100%;
+}
+
 .mobileContainer {
   composes: u-textSizeMed from global;
   height: 100% !important;
