--- a/src/component/chat/ChatOperatingHours.scss
+++ b/src/component/chat/ChatOperatingHours.scss
@@ -27,17 +27,8 @@
   margin-bottom: #{15/$font-size}rem;
 }
 
-.button {
-  max-width: 100%;
-  width: calc(100% - #{20/$font-size}rem) !important;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  margin: 0 #{10/$font-size}rem;
-}
-
 .dropdown {
-  composes: u-marginBL from global;
+  margin: #{20/$font-size}rem 0;
 }
 
 .dropdownMenuContainer {
