Move button back to ChatOperatingHours so it doesn't clash with the ZendeskLogo

--- a/src/component/chat/ChatOperatingHours.scss
+++ b/src/component/chat/ChatOperatingHours.scss
@@ -24,11 +24,16 @@
 }
 
 .hours {
-  margin-bottom: #{15/$font-size}rem;
+  margin-bottom: #{12/$font-size}rem;
+}
+
+.button {
+  max-width: 100%;
+  width: 100%;
 }
 
 .dropdown {
-  margin: #{20/$font-size}rem 0;
+  margin: #{16/$font-size}rem 0;
 }
 
 .dropdownLabel {
