--- a/src/component/chat/MessageError.scss
+++ b/src/component/chat/MessageError.scss
@@ -15,9 +15,18 @@
 }
 
 .icon {
+  display: inline-block;
   position: relative;
-  top: #{3/$font-size}rem;
   margin-right: $spacing-tny;
+  height: #{14/$font-size}rem;
+  width: #{14/$font-size}rem;
+  vertical-align: top;
+  top: #{2/$font-size}rem;
+
+  svg {
+    height: #{14/$font-size}rem;
+    width: #{14/$font-size}rem;
+  }
 
   [dir='rtl'] & {
     margin-left: $spacing-tny;
